--- a/source/_posts/2021-04-07-release-20214.markdown
+++ b/source/_posts/2021-04-07-release-20214.markdown
@@ -951,7 +951,7 @@ Home Assistant Core 2021.7.0:
 
 - `speed_command_topic`
 - `speed_state_topic`
-- `state_value_template`
+- `speed_value_template`
 - `speed_list`
 
 Additionally,`preset_modes` and `percentage` are added to replace the legacy
