--- a/source/_integrations/bme280.markdown
+++ b/source/_integrations/bme280.markdown
@@ -10,11 +10,7 @@ ha_platforms:
   - sensor
 ---
 
-The `bme280` sensor platform allows you to read temperature, humidity and pressure values of a [Bosch BME280 Environmental sensor](https://cdn-shop.adafruit.com/datasheets/BST-BME280_DS001-10.pdf) connected via [I2c](https://en.wikipedia.org/wiki/I²C) bus (SDA, SCL pins). It allows you to use all the operation modes of the sensor described in its datasheet.
-
-Tested devices:
-
-- [Raspberry Pi](https://www.raspberrypi.org/)
+The Bosch BME280 integration allows you to read temperature, humidity and pressure values of a [Bosch BME280 Environmental sensor](https://cdn-shop.adafruit.com/datasheets/BST-BME280_DS001-10.pdf) connected via [I2c](https://en.wikipedia.org/wiki/I²C) bus (SDA, SCL pins) or connected via SPI. It allows you to use all the operation modes of the sensor described in its datasheet.
 
 ## Configuration
 
@@ -149,6 +145,10 @@ group:
 
 ## Directions for installing smbus support on Raspberry Pi
 
+<div class="note">
+This section only applies to devices running the Home Assistant Core installation method.
+</div>
+
 Enable I2c interface with the Raspberry Pi configuration utility:
 
 ```bash
@@ -197,6 +197,8 @@ So you can see the sensor address what you are looking for is **0x77** (there ar
 
 ## SPI Support
 
+Alternatively, this integration can also be used with SPI.
+
 ### Config example
 
 ```yaml
@@ -217,6 +219,10 @@ bme280:
 ```
 
 ## Directions for installing SPI support on Raspberry Pi
+
+<div class="note">
+This section only applies to devices running the Home Assistant Core installation method.
+</div>
 
 Enable SPI interface with the Raspberry Pi:
 
