--- a/source/_posts/2021-08-04-release-20218.markdown
+++ b/source/_posts/2021-08-04-release-20218.markdown
@@ -62,6 +62,7 @@ later today (9:00 PM CET).
 - [Integrations now available to set up from the UI](#integrations-now-available-to-set-up-from-the-ui)
 - [Release 2021.8.1 - August 4](#release-202181---august-4)
 - [Release 2021.8.2 - August 5](#release-202182---august-5)
+- [Release 2021.8.3 - August 6](#release-202183---august-6)
 - [If you need help...](#if-you-need-help)
 - [Breaking Changes](#breaking-changes)
 - [Farewell to the following](#farewell-to-the-following)
@@ -375,6 +376,29 @@ The following integrations are now available via the Home Assistant UI:
 [template docs]: /integrations/template/
 [zeroconf docs]: /integrations/zeroconf/
 [zha docs]: /integrations/zha/
+
+## Release 2021.8.3 - August 6
+
+- Gracefully handle additional GSM errors ([@ocalvo] - [#54114]) ([sms docs])
+- Handle software version being None when setting up HomeKit accessories ([@nzapponi] - [#54130]) ([homekit docs])
+- Fix sensor PLATFORM_SCHEMA for ebox and enphase_envoy ([@mib1185] - [#54142]) ([enphase_envoy docs])
+- Fetch interface index from network integration instead of socket.if_nametoindex in zeroconf ([@bdraco] - [#54152]) ([zeroconf docs]) ([network docs])
+- Bump zeroconf to 0.33.4 to ensure zeroconf can startup when ipv6 is disabled ([@bdraco] - [#54165]) ([zeroconf docs])
+
+[#54114]: https://github.com/home-assistant/core/pull/54114
+[#54130]: https://github.com/home-assistant/core/pull/54130
+[#54142]: https://github.com/home-assistant/core/pull/54142
+[#54152]: https://github.com/home-assistant/core/pull/54152
+[#54165]: https://github.com/home-assistant/core/pull/54165
+[@bdraco]: https://github.com/bdraco
+[@mib1185]: https://github.com/mib1185
+[@nzapponi]: https://github.com/nzapponi
+[@ocalvo]: https://github.com/ocalvo
+[enphase_envoy docs]: /integrations/enphase_envoy/
+[homekit docs]: /integrations/homekit/
+[network docs]: /integrations/network/
+[sms docs]: /integrations/sms/
+[zeroconf docs]: /integrations/zeroconf/
 
 ## If you need help...
 
